# NeuroProof

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  NeuroProof_test.cpp  README.md  README.txt  analyze_segmentation_graph.cpp  calculate_GPR.cpp  circle.yml  compile_against_conda.sh  configure-for-conda.sh  doxygenconfig.file  generate_stats.cpp  graph.json  neuroproof_create_spgraph.cpp  neuroproof_graph_analyze.cpp  neuroproof_graph_analyze_gt.cpp  neuroproof_graph_learn.cpp  neuroproof_graph_predict.cpp  pythonNeuroProofPriorityInterface.cpp  pythonNeuroProofPriorityInterface.h  pythonRagInterface.cpp  run-testragscript.sh  run-testscript.sh  testragscript.py  testscript.py
Algorithms/: BatchMergeMRFh.cpp  BatchMergeMRFh.h  CMakeLists.txt  FeatureJoinAlgs.h  MergePriorityFunction.cpp  MergePriorityFunction.h  MergePriorityQueue.h  RagAlgs.h
BioPriors/: BioStack.cpp  BioStack.h  BioStackController.cpp  BioStackController.h  CMakeLists.txt  Dataset.h  IterativeLearn.cpp  IterativeLearn.h  IterativeLearn_cotrain.h  IterativeLearn_iwal.h  IterativeLearn_random.h  IterativeLearn_semi.cpp  IterativeLearn_semi.h  IterativeLearn_simulate.cpp  IterativeLearn_simulate.h  StackAgglom.cpp  StackAgglom.h  StackAgglomAlgs.cpp  StackAgglomAlgs.h  StackLearnAlgs.cpp  StackLearnAlgs.h
Classifier/: CMakeLists.txt  edgeclassifier.h  opencvABclassifier.cpp  opencvABclassifier.h  opencvRFclassifier.cpp  opencvRFclassifier.h  opencvSVMclassifier.cpp  opencvSVMclassifier.h  vigraRFclassifier.cpp  vigraRFclassifier.h
DataStructures/: AffinityPair.h  CMakeLists.txt  Glb.h  NodeType.h  Property.h  PropertyList.h  Rag.h  RagEdge.h  RagNode.h  Stack.cpp  Stack.h  StackLearn.cpp  StackPredict.cpp
EdgeEditor/: CMakeLists.txt  EdgeEditor.cpp  EdgeEditor.h  EdgeRank.h  EdgeRankToufiq.cpp  EdgeRankToufiq.h  GPR.cpp  GPR.h  NodeCentricRank.cpp  NodeCentricRank.h  NodeEdgeRank.cpp  NodeEdgeRank.h  NodeSizeRank.cpp  NodeSizeRank.h  OrphanRank.cpp  OrphanRank.h  ProbEdgeRank.cpp  ProbEdgeRank.h  SynapseRank.cpp  SynapseRank.h
FeatureManager/: CMakeLists.txt  FeatureCache.h  FeatureManager.cpp  FeatureManager.h  FeatureMgr.cpp  FeatureMgr.h  Features.cpp  Features.h
Gui/: CMakeLists.txt  MessageBox.h  StackQTController.cpp  StackQTController.h  StackQTUi.cpp  StackQTUi.h  neuroproof_stack_viewer.ui
ImportsExports/: CMakeLists.txt  ImportExportRagPriority.cpp  ImportExportRagPriority.h
Metrics/: CMakeLists.txt
Priority/: CMakeLists.txt  EdgePriority.h  GPR.h  LocalEdgePriority.cpp  LocalEdgePriority.h
Rag/: CMakeLists.txt  Property.h  Rag.h  RagEdge.h  RagElement.h  RagIO.cpp  RagIO.h  RagNode.h  RagNodeCombineAlg.h  RagUtils.cpp  RagUtils.h
Rag/Properties/: GlbPropertyManager.cpp  GlbPropertyManager.h  MitoTypeProperty.h  Property.h
Rag/unit_tests/: basic_rag.cpp
SemiSupervised/: CMakeLists.txt  kmeans.cpp  kmeans.h  solve_amg.hpp  weightmatrix1.cpp  weightmatrix1.h
SemiSupervised/amgcl/: amgcl.hpp
Stack/: CMakeLists.txt  Dispatcher.h  Stack.cpp  Stack.h  StackBase.h  StackBodyController.cpp  StackBodyController.h  StackBodyView.cpp  StackBodyView.h  StackController.cpp  StackController.h  StackObserver.h  StackPlaneController.cpp  StackPlaneController.h  StackPlaneView.cpp  StackPlaneView.h  StackSession.cpp  StackSession.h  VolumeData.h  VolumeLabelData.cpp  VolumeLabelData.h  neuroproof_graph_predict2.cpp  stack_test.cpp
Stack/unit_tests/: basic_stack.cpp
StackGui/: CMakeLists.txt  StackBodyController.h  StackBodyView.h  StackPlaneView.cpp  StackPlaneView.h  StackSession.cpp  StackSession.h
libMetrics/: CMakeLists.txt  pythonMetrics.cpp
neuroproof/: CMakeLists.txt  CMakeLists.txt~  neuroproof_agg_prob_dvid.cpp  neuroproof_create_spgraph.cpp  neuroproof_graph_analyze.cpp  neuroproof_graph_analyze_gt.cpp  neuroproof_graph_build_dvid.cpp  neuroproof_graph_build_stream.cpp  neuroproof_graph_learn.cpp  neuroproof_graph_learn.cpp~  neuroproof_graph_predict.cpp  neuroproof_stack_viewer.cpp  pythonNeuroProofPriorityInterface.cpp  pythonRagInterface.cpp
python/: CMakeLists.txt
python/src/: Agglomeration.cpp  Classifier.cpp  FocusedProofreading.cpp  converters.hpp  init_numpy.cpp  init_numpy.h
src/Algorithms/: BatchMergeMRFh.cpp  BatchMergeMRFh.h  CMakeLists.txt  FeatureJoinAlgs.h  MergePriorityFunction.cpp  MergePriorityFunction.h  MergePriorityQueue.h
src/BioPriors/: BioStack.cpp  BioStack.cpp~  BioStack.h  BioStack.h~  CMakeLists.txt  CMakeLists.txt~  Dataset.cpp  Dataset.h  IterativeLearn.cpp  IterativeLearn.h  IterativeLearn_cotrain.cpp  IterativeLearn_semi.cpp  IterativeLearn_semi.cpp~  IterativeLearn_semi.h  IterativeLearn_semi.h~  IterativeLearn_simulate.h  IterativeLearn_unc.cpp  IterativeLearn_unc.h  MitoTypeProperty.h  StackAgglomAlgs.cpp  StackLearnAlgs.cpp  StackLearnAlgs.cpp~  StackLearnAlgs.h
src/Classifier/: CMakeLists.txt  opencvABclassifier.cpp  opencvABclassifier.h  opencvRFclassifier.cpp  opencvRFclassifier.h  opencvSVMclassifier.h  vigraRFclassifier.cpp
src/EdgeEditor/: CMakeLists.txt  EdgeEditor.cpp  EdgeEditor.h  EdgeRank.h  EdgeRankToufiq.cpp  EdgeRankToufiq.cpp~  EdgeRankToufiq.h  GPR.cpp  GPR.h  NodeCentricRank.cpp  NodeCentricRank.h  NodeSizeRank.cpp  NodeSizeRank.h  OrphanRank.cpp  OrphanRank.h  ProbEdgeRank.h  SynapseRank.cpp  SynapseRank.h
src/FeatureManager/: CMakeLists.txt  FeatureCache.h  FeatureMgr.cpp~  FeatureMgr.h  FeatureMgr.h~  Features.cpp  Features.h
src/Gui/: CMakeLists.txt  MessageBox.h  StackQTController.cpp  StackQTController.h  StackQTUi.h
src/IO/: CMakeLists.txt  RagIO.cpp  RagIO.h  StackIO.cpp  StackIO.h
src/Rag/: CMakeLists.txt  Property.h  Rag.h  RagEdge.h  RagElement.h  RagNode.h  RagNodeCombineAlg.h  RagUtils.cpp  RagUtils.h
src/SemiSupervised/: CMakeLists.txt
src/Stack/: CMakeLists.txt  Stack.cpp  Stack.h  StackBase.h  VolumeData.h  VolumeLabelData.cpp  VolumeLabelData.h
src/StackGui/: CMakeLists.txt  StackBodyController.h  StackBodyView.cpp  StackBodyView.h  StackPlaneController.h  StackPlaneView.cpp  StackPlaneView.h  StackSession.cpp  StackSession.cpp~  StackSession.h
unit_tests/: CMakeLists.txt
(+93 files in other folders)
