CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
project (GUI)

IF(NOT CMAKE_BUILD_TYPE)
    SET (CMAKE_BUILD_TYPE Release)
ENDIF(NOT CMAKE_BUILD_TYPE)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
message("${CMAKE_CURRENT_BINARY_DIR}")


set (SOURCES StackQTController.cpp)

QT4_WRAP_CPP(QTHEADERS StackQTUi.h)
QT4_WRAP_UI(QTFORMS neuroproof_stack_viewer.ui)

add_library (Gui SHARED ${SOURCES} ${QTFORMS} ${QTHEADERS})

if (NOT BUILDEM_DIR STREQUAL "None")
    add_dependencies (Gui ${boost_NAME})
endif()

